# Forecasting_Supermarket_Sales

./: README.md  Supermarket_case.ipynb  app.py  feat_eng.py  model.sav  prediction.py  pyproject.toml  requirements.txt  trends.sav
.github/workflows/: main.yml
